fixed alignment bug

--- a/static/css/sass.css
+++ b/static/css/sass.css
@@ -3077,6 +3077,7 @@ input[type=range].MASAS-slider {
       right: 0;
       cursor: pointer; }
     .footer--wrapper .main-mini-profile--wrapper .main-mini-profile--wrapper2 .user-songs--wrapper {
+      align-items: center;
       width: 27rem;
       display: flex;
       overflow-y: scroll;
