--- a/static/sass/Profile/MiniProfileWrapper.sass
+++ b/static/sass/Profile/MiniProfileWrapper.sass
@@ -34,6 +34,7 @@
 				cursor: pointer
 
 			.user-songs--wrapper
+				align-items: center
 				width: 27rem
 				display: flex
 				overflow-y: scroll
